Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/Core.pas


function LLVMContextCreate:TLLVMContextRef;cdecl;external libllvm;
function LLVMGetGlobalContext:TLLVMContextRef;cdecl;external libllvm;
procedure LLVMContextSetDiagnosticHandler(C:TLLVMContextRef; Handler:TLLVMDiagnosticHandler; DiagnosticContext:pointer);cdecl;external libllvm;
function LLVMContextGetDiagnosticHandler(C:TLLVMContextRef):TLLVMDiagnosticHandler;cdecl;external libllvm;
function LLVMContextGetDiagnosticContext(C:TLLVMContextRef):pointer;cdecl;external libllvm;
procedure LLVMContextSetYieldCallback(C:TLLVMContextRef; Callback:TLLVMYieldCallback; OpaqueHandle:pointer);cdecl;external libllvm;
function LLVMContextShouldDiscardValueNames(C:TLLVMContextRef):TLLVMBool;cdecl;external libllvm;
procedure LLVMContextSetDiscardValueNames(C:TLLVMContextRef; Discard:TLLVMBool);cdecl;external libllvm;
procedure LLVMContextDispose(C:TLLVMContextRef);cdecl;external libllvm;
function LLVMGetDiagInfoDescription(DI:TLLVMDiagnosticInfoRef):Pchar;cdecl;external libllvm;
function LLVMGetDiagInfoSeverity(DI:TLLVMDiagnosticInfoRef):TLLVMDiagnosticSeverity;cdecl;external libllvm;
function LLVMGetMDKindIDInContext(C:TLLVMContextRef; Name:Pchar; SLen:dword):dword;cdecl;external libllvm;
function LLVMGetMDKindID(Name:Pchar; SLen:dword):dword;cdecl;external libllvm;
function LLVMGetSyncScopeID(C:TLLVMContextRef; Name:Pchar; SLen:Tsize_t):dword;cdecl;external libllvm;
function LLVMGetEnumAttributeKindForName(Name:Pchar; SLen:Tsize_t):dword;cdecl;external libllvm;
function LLVMGetLastEnumAttributeKind:dword;cdecl;external libllvm;
function LLVMCreateEnumAttribute(C:TLLVMContextRef; KindID:dword; Val:Tuint64_t):TLLVMAttributeRef;cdecl;external libllvm;
function LLVMGetEnumAttributeKind(A:TLLVMAttributeRef):dword;cdecl;external libllvm;
function LLVMGetEnumAttributeValue(A:TLLVMAttributeRef):Tuint64_t;cdecl;external libllvm;
function LLVMCreateTypeAttribute(C:TLLVMContextRef; KindID:dword; type_ref:TLLVMTypeRef):TLLVMAttributeRef;cdecl;external libllvm;
function LLVMGetTypeAttributeValue(A:TLLVMAttributeRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMCreateConstantRangeAttribute(C:TLLVMContextRef; KindID:dword; NumBits:dword; LowerWords:Puint64_t; UpperWords:Puint64_t):TLLVMAttributeRef;cdecl;external libllvm;
function LLVMCreateStringAttribute(C:TLLVMContextRef; K:Pchar; KLength:dword; V:Pchar; VLength:dword):TLLVMAttributeRef;cdecl;external libllvm;
function LLVMGetStringAttributeKind(A:TLLVMAttributeRef; Length:Pdword):Pchar;cdecl;external libllvm;
function LLVMGetStringAttributeValue(A:TLLVMAttributeRef; Length:Pdword):Pchar;cdecl;external libllvm;
function LLVMIsEnumAttribute(A:TLLVMAttributeRef):TLLVMBool;cdecl;external libllvm;
function LLVMIsStringAttribute(A:TLLVMAttributeRef):TLLVMBool;cdecl;external libllvm;
function LLVMIsTypeAttribute(A:TLLVMAttributeRef):TLLVMBool;cdecl;external libllvm;
function LLVMGetTypeByName2(C:TLLVMContextRef; Name:Pchar):TLLVMTypeRef;cdecl;external libllvm;
function LLVMModuleCreateWithName(ModuleID:Pchar):TLLVMModuleRef;cdecl;external libllvm;
function LLVMModuleCreateWithNameInContext(ModuleID:Pchar; C:TLLVMContextRef):TLLVMModuleRef;cdecl;external libllvm;
function LLVMCloneModule(M:TLLVMModuleRef):TLLVMModuleRef;cdecl;external libllvm;
procedure LLVMDisposeModule(M:TLLVMModuleRef);cdecl;external libllvm;
function LLVMIsNewDbgInfoFormat(M:TLLVMModuleRef):TLLVMBool;cdecl;external libllvm;
procedure LLVMSetIsNewDbgInfoFormat(M:TLLVMModuleRef; UseNewFormat:TLLVMBool);cdecl;external libllvm;
function LLVMGetModuleIdentifier(M:TLLVMModuleRef; Len:Psize_t):Pchar;cdecl;external libllvm;
procedure LLVMSetModuleIdentifier(M:TLLVMModuleRef; Ident:Pchar; Len:Tsize_t);cdecl;external libllvm;
function LLVMGetSourceFileName(M:TLLVMModuleRef; Len:Psize_t):Pchar;cdecl;external libllvm;
procedure LLVMSetSourceFileName(M:TLLVMModuleRef; Name:Pchar; Len:Tsize_t);cdecl;external libllvm;
function LLVMGetDataLayoutStr(M:TLLVMModuleRef):Pchar;cdecl;external libllvm;
function LLVMGetDataLayout(M:TLLVMModuleRef):Pchar;cdecl;external libllvm;
procedure LLVMSetDataLayout(M:TLLVMModuleRef; DataLayoutStr:Pchar);cdecl;external libllvm;
function LLVMGetTarget(M:TLLVMModuleRef):Pchar;cdecl;external libllvm;
procedure LLVMSetTarget(M:TLLVMModuleRef; Triple:Pchar);cdecl;external libllvm;
function LLVMCopyModuleFlagsMetadata(M:TLLVMModuleRef; Len:Psize_t):PLLVMModuleFlagEntry;cdecl;external libllvm;
procedure LLVMDisposeModuleFlagsMetadata(Entries:PLLVMModuleFlagEntry);cdecl;external libllvm;
function LLVMModuleFlagEntriesGetFlagBehavior(Entries:PLLVMModuleFlagEntry; Index:dword):TLLVMModuleFlagBehavior;cdecl;external libllvm;
function LLVMModuleFlagEntriesGetKey(Entries:PLLVMModuleFlagEntry; Index:dword; Len:Psize_t):Pchar;cdecl;external libllvm;
function LLVMModuleFlagEntriesGetMetadata(Entries:PLLVMModuleFlagEntry; Index:dword):TLLVMMetadataRef;cdecl;external libllvm;
function LLVMGetModuleFlag(M:TLLVMModuleRef; Key:Pchar; KeyLen:Tsize_t):TLLVMMetadataRef;cdecl;external libllvm;
procedure LLVMAddModuleFlag(M:TLLVMModuleRef; Behavior:TLLVMModuleFlagBehavior; Key:Pchar; KeyLen:Tsize_t; Val:TLLVMMetadataRef);cdecl;external libllvm;
procedure LLVMDumpModule(M:TLLVMModuleRef);cdecl;external libllvm;
function LLVMPrintModuleToFile(M:TLLVMModuleRef; Filename:Pchar; ErrorMessage:PPchar):TLLVMBool;cdecl;external libllvm;
function LLVMPrintModuleToString(M:TLLVMModuleRef):Pchar;cdecl;external libllvm;
function LLVMGetModuleInlineAsm(M:TLLVMModuleRef; Len:Psize_t):Pchar;cdecl;external libllvm;
procedure LLVMSetModuleInlineAsm2(M:TLLVMModuleRef; Asm_:Pchar; Len:Tsize_t);cdecl;external libllvm;
procedure LLVMAppendModuleInlineAsm(M:TLLVMModuleRef; Asm_:Pchar; Len:Tsize_t);cdecl;external libllvm;
function LLVMGetInlineAsm(Ty:TLLVMTypeRef; AsmString:Pchar; AsmStringSize:Tsize_t; Constraints:Pchar; ConstraintsSize:Tsize_t;
           HasSideEffects:TLLVMBool; IsAlignStack:TLLVMBool; Dialect:TLLVMInlineAsmDialect; CanThrow:TLLVMBool):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetInlineAsmAsmString(InlineAsmVal:TLLVMValueRef; Len:Psize_t):Pchar;cdecl;external libllvm;
function LLVMGetInlineAsmConstraintString(InlineAsmVal:TLLVMValueRef; Len:Psize_t):Pchar;cdecl;external libllvm;
function LLVMGetInlineAsmDialect(InlineAsmVal:TLLVMValueRef):TLLVMInlineAsmDialect;cdecl;external libllvm;
function LLVMGetInlineAsmFunctionType(InlineAsmVal:TLLVMValueRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetInlineAsmHasSideEffects(InlineAsmVal:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
function LLVMGetInlineAsmNeedsAlignedStack(InlineAsmVal:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
function LLVMGetInlineAsmCanUnwind(InlineAsmVal:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
function LLVMGetModuleContext(M:TLLVMModuleRef):TLLVMContextRef;cdecl;external libllvm;
function LLVMGetTypeByName(M:TLLVMModuleRef; Name:Pchar):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetFirstNamedMetadata(M:TLLVMModuleRef):TLLVMNamedMDNodeRef;cdecl;external libllvm;
function LLVMGetLastNamedMetadata(M:TLLVMModuleRef):TLLVMNamedMDNodeRef;cdecl;external libllvm;
function LLVMGetNextNamedMetadata(NamedMDNode:TLLVMNamedMDNodeRef):TLLVMNamedMDNodeRef;cdecl;external libllvm;
function LLVMGetPreviousNamedMetadata(NamedMDNode:TLLVMNamedMDNodeRef):TLLVMNamedMDNodeRef;cdecl;external libllvm;
function LLVMGetNamedMetadata(M:TLLVMModuleRef; Name:Pchar; NameLen:Tsize_t):TLLVMNamedMDNodeRef;cdecl;external libllvm;
function LLVMGetOrInsertNamedMetadata(M:TLLVMModuleRef; Name:Pchar; NameLen:Tsize_t):TLLVMNamedMDNodeRef;cdecl;external libllvm;
function LLVMGetNamedMetadataName(NamedMD:TLLVMNamedMDNodeRef; NameLen:Psize_t):Pchar;cdecl;external libllvm;
function LLVMGetNamedMetadataNumOperands(M:TLLVMModuleRef; Name:Pchar):dword;cdecl;external libllvm;
procedure LLVMGetNamedMetadataOperands(M:TLLVMModuleRef; Name:Pchar; Dest:PLLVMValueRef);cdecl;external libllvm;
procedure LLVMAddNamedMetadataOperand(M:TLLVMModuleRef; Name:Pchar; Val:TLLVMValueRef);cdecl;external libllvm;
function LLVMGetDebugLocDirectory(Val:TLLVMValueRef; Length:Pdword):Pchar;cdecl;external libllvm;
function LLVMGetDebugLocFilename(Val:TLLVMValueRef; Length:Pdword):Pchar;cdecl;external libllvm;
function LLVMGetDebugLocLine(Val:TLLVMValueRef):dword;cdecl;external libllvm;
function LLVMGetDebugLocColumn(Val:TLLVMValueRef):dword;cdecl;external libllvm;
function LLVMAddFunction(M:TLLVMModuleRef; Name:Pchar; FunctionTy:TLLVMTypeRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetNamedFunction(M:TLLVMModuleRef; Name:Pchar):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetNamedFunctionWithLength(M:TLLVMModuleRef; Name:Pchar; Length:Tsize_t):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetFirstFunction(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetLastFunction(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetNextFunction(Fn:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
function LLVMGetPreviousFunction(Fn:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
procedure LLVMSetModuleInlineAsm(M:TLLVMModuleRef; Asm_:Pchar);cdecl;external libllvm;
function LLVMGetTypeKind(Ty:TLLVMTypeRef):TLLVMTypeKind;cdecl;external libllvm;
function LLVMTypeIsSized(Ty:TLLVMTypeRef):TLLVMBool;cdecl;external libllvm;
function LLVMGetTypeContext(Ty:TLLVMTypeRef):TLLVMContextRef;cdecl;external libllvm;
procedure LLVMDumpType(Val:TLLVMTypeRef);cdecl;external libllvm;
function LLVMPrintTypeToString(Val:TLLVMTypeRef):Pchar;cdecl;external libllvm;

function LLVMInt1TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt8TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt16TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt32TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt64TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt128TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMIntTypeInContext(C:TLLVMContextRef; NumBits:dword):TLLVMTypeRef;cdecl;external libllvm;

function LLVMInt1Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt8Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt16Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt32Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt64Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMInt128Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMIntType(NumBits:dword):TLLVMTypeRef;cdecl;external libllvm;
function LLVMGetIntTypeWidth(IntegerTy:TLLVMTypeRef):dword;cdecl;external libllvm;
function LLVMHalfTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMBFloatTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMFloatTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMDoubleTypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMX86FP80TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMFP128TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;
function LLVMPPCFP128TypeInContext(C:TLLVMContextRef):TLLVMTypeRef;cdecl;external libllvm;

function LLVMHalfType:TLLVMTypeRef;cdecl;external libllvm;
function LLVMBFloatType:TLLVMTypeRef;cdecl;external libllvm;
function LLVMFloatType:TLLVMTypeRef;cdecl;external libllvm;
function LLVMDoubleType:TLLVMTypeRef;cdecl;external libllvm;
function LLVMX86FP80Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMFP128Type:TLLVMTypeRef;cdecl;external libllvm;
function LLVMPPCFP128Type:TLLVMTypeRef;cdecl;external libllvm;
